@@ -3,4 +3,4 @@
 static const char SCCSID[]="@(#)pj_release.c	4.5 95/09/23 GIE REL";
 #endif
 
-char const pj_release[]="Rel. 4.4.4, 15 September 2001";
+char const pj_release[]="Rel. 4.4.5, 9 January 2002";
